Array implementation finalised.

--- a/tests/.env
+++ b/tests/.env
@@ -4,5 +4,5 @@ percent=some%20string%20
 empty=
 zero=0
 false=false
-array=" \"value1\", \"value2\", \"value3\" "
-arrayplain=value1,value2,value3
+array="'value1','value2','value3'"
+arraynoesc=val1,val2,val3
